# ai-labeling-demo-v0.1

./: DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  README.md  STARTUP_GUIDE.md  deploy.sh  pyproject.toml  start.sh
backend/: Dockerfile  logs.db  render.yaml  requirements.txt
backend/app/: __init__.py  accounts.py  auth.py  labeling.py  main.py  models.py
frontend/: index.html  package-lock.json  package.json  vercel.json
frontend/src/: App.tsx  main.tsx
frontend/src/components/: LabelingInterface.tsx  Login.tsx
frontend/src/utils/: api.ts  auth.ts
