[project]
name = "ai-labeling"
version = "0.1.0"
description = ""
authors = [
    {name = "e y i"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "refuel-autolabel[openai] (>=0.0.16,<0.0.17)",
    "openai (>=1.82.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
